Adjusted button sizes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
         </div>
         <div id="helpArea">
-            <span class="button" id="stuck">Don't know</span>
-            <span class="button" id="reset">Reset Progress</span>
+            <span class="smallButton" id="stuck">Don't know</span>
+            <span class="smallButton" id="reset">Reset Progress</span>
         </div>
         <div id="progressArea">
             <span class="text" id="progressNumber"></span>
